--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -17,6 +17,10 @@
     padding-left: 8px;
 }
 
+.app-main-content{
+    overflow-y: auto;
+}
+
 .app-header-toolbar{
     //padding-top: 60px;
     margin-top: 10px;
@@ -66,6 +70,7 @@
     min-width: 100%;
     height: 100%;
     min-height: 100%;
+    overflow: auto;
 }
 
 .cts-logo{
